--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -22,3 +22,9 @@ main {
   flex-direction: column;
   min-height: 100vh;
 }
+
+.render-area {
+  width: 100%;
+  height: 100%;
+  margin-left: 10px;
+}
